WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
241559
The extraMemorySize() get wrong when transferring ArrayBuffer from Worker VM
https://bugs.webkit.org/show_bug.cgi?id=241559
Summary
The extraMemorySize() get wrong when transferring ArrayBuffer from Worker VM
Basuke Suzuki
Reported
2022-06-13 11:19:35 PDT
When ArrayBuffer is passed in the transfer option of postMessage(), the size cached in heap.m_arrayBuffers get incorrect and that makes extraMemorySize() bigger than actual managed size.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-06-16 19:21:14 PDT
Committed
r295624
(
251629@main
): <
https://commits.webkit.org/251629@main
> Reviewed commits have been landed. Closing PR #1453 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-06-16 19:22:14 PDT
<
rdar://problem/95350212
>
Alexey Proskuryakov
Comment 3
2022-06-21 19:01:26 PDT
This was reverted in
bug 241826
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug